--- a/性能优化.md
+++ b/性能优化.md
@@ -1,1 +1,15 @@
-
+# 性能优化
+Android 性能优化 (一)APK高效瘦身 
+http://blog.csdn.net/whb20081815/article/details/70140063
+Android 性能优化 (二)数据库优化 秒变大神
+http://blog.csdn.net/whb20081815/article/details/70142033
+Android 性能优化（三）布局优化 秒变大神 
+http://blog.csdn.net/whb20081815/article/details/70147958
+Android 性能优化（四）内存优化OOM 秒变大神
+http://blog.csdn.net/whb20081815/article/details/70243105
+Android 性能优化（五）ANR 秒变大神
+http://blog.csdn.net/whb20081815/article/details/70245594
+Android 性能优化（六） RelativeLayout和LinearLayout性能比较
+http://blog.csdn.net/whb20081815/article/details/74465870
+Android 性能优化<七>自定义view绘制优化 
+http://blog.csdn.net/whb20081815/article/details/74474736
