--- a/性能优化.md
+++ b/性能优化.md
@@ -13,3 +13,48 @@ Android 性能优化（六） RelativeLayout和LinearLayout性能比较
 http://blog.csdn.net/whb20081815/article/details/74465870
 Android 性能优化<七>自定义view绘制优化 
 http://blog.csdn.net/whb20081815/article/details/74474736
+
+
+## 性能优化 (一)APK高效瘦身
+* 压缩图片
+* 使用Android Lint分析去除无用资源
+* 开启minifyEnabled混淆代码
+* 在gradle使用shrinkResources去除无用资源，效果非常好。
+* 用极限压缩工具，或者：使用AndResGuard、AndResGuard是微信开源出来的一个打包工具
+* 使用SVG图片格式
+* 支持插件化
+
+## 性能优化 (二)数据库优化 秒变大神
+* 数据库插入效率
+有三种方法：
+1）直接拼接SQL语句，执行execSQL方法；
+2）借用ContentValues进行插入；
+3）使用compileStatement进行插入
+* 开启事务批量插入,借用ContentValues
+* compileStatement,开启事务批量插入，使用SQLiteStatement
+* 语句的拼接使用StringBuilder代替String
+* 少用cursor.getColumnIndex
+* 查询条件多点限制，查表就速度快
+
+## 性能优化（三）布局优化 秒变大神
+* 首先是善用相对布局Relativelayout
+* 重用布局文件<include>
+* merge标签：
+* viewstub标签
+* Android最新的布局方式ConstaintLayout
+* 流动布局（FlexboxLayout）
+* 布局延时加载或者用到时再加载
+
+总结：
+1,减少一个布局的不必要节点
+2,尽量重用一个布局文件
+3,尽量使用view自身的参数
+4.减少不必要的infalte(Listview)
+  兼容问题呢?兼容问题出现的原因千奇百怪,没有一套通用的法则!关于这点谈一下自己的看法
+1,减少复杂度,往往,兼容问题的出现,就是布局太复杂了,例如,我举的那个按钮布局,本来一个View就能完成,你却用了三个view完成,在使用的时候,出现问题的概念也大幅度提升!所以,布局以简单为本,那样兼容问题就可以尽量避免!
+2,熟练使用工具,还记得hierarchyviewer 吗?当出现兼容问题的时候,用这个软件可以快速定位到错误位置!
+
+
+
+
+
